--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name="Activity.GasTankUp"/>
         <activity android:name="Activity.AddCar"/>
+        <activity android:name="Activity.GPSActivity" />
     </application>
 
 </manifest>
